Add version information for API methods
For each API method/type the documentation now includes
the version it was introduced or a change occured.

JerryScript-DCO-1.0-Signed-off-by: Peter Gal pgal.u-szeged@partner.samsung.com

--- a/docs/02.API-REFERENCE.md
+++ b/docs/02.API-REFERENCE.md
@@ -11,6 +11,8 @@ Enum that contains the following elements:
  - JERRY_INIT_MEM_STATS_SEPARATE - **deprecated**, dump memory statistics and reset peak values after parse
  - JERRY_INIT_DEBUGGER - **deprecated**, an unused placeholder now
 
+*Changed in version 2.0*: JERRY_INIT_MEM_STATS_SEPARATE and JERRY_INIT_DEBUGGER are now deprecated and not used internally.
+
 ## jerry_type_t
 
 Enum that contains JerryScript API value types:
@@ -26,6 +28,8 @@ Enum that contains JerryScript API value types:
  - JERRY_TYPE_ERROR - error/abort type
  - JERRY_TYPE_SYMBOL - symbol type
 
+*New in version 2.0*.
+
 ## jerry_error_t
 
 Possible types of an error:
@@ -40,6 +44,8 @@ Possible types of an error:
 
 There is also a special value `JERRY_ERROR_NONE` which is not an error type
 this value can only be returned by the [jerry_get_error_type](#jerry_get_error_type).
+
+*Changed in version 2.0*: The `JERRY_ERROR_NONE` was added to be used by the [jerry_get_error_type](#jerry_get_error_type) method.
 
 ## jerry_feature_t
 
@@ -65,6 +71,8 @@ Possible compile time enabled feature types:
  - JERRY_FEATURE_SYMBOL - symbol support
  - JERRY_FEATURE_DATAVIEW - DataView support
 
+*New in version 2.0*.
+
 ## jerry_regexp_flags_t
 
 RegExp object optional flags:
@@ -75,6 +83,8 @@ RegExp object optional flags:
   multiple lines (i.e., match the beginning or end of each line (delimited by \n or \r), not only the
   very beginning or end of the whole input string)
 
+*New in version 2.0*.
+
 ## jerry_parse_opts_t
 
 Option bits for [jerry_parse](#jerry_parse) and
@@ -82,6 +92,8 @@ Option bits for [jerry_parse](#jerry_parse) and
 
  - JERRY_PARSE_NO_OPTS - no options passed
  - JERRY_PARSE_STRICT_MODE - enable strict mode
+
+*New in version 2.0*.
 
 ## jerry_gc_mode_t
 
@@ -94,6 +106,8 @@ The difference between `JERRY_GC_PRESSURE_LOW` and `JERRY_GC_PRESSURE_HIGH`
 is that the former keeps memory allocated for performance improvements such
 as property hash tables for large objects. The latter frees all possible
 memory blocks but the performance may drop after the garbage collection.
+
+*New in version 2.0*.
 
 ## jerry_generate_snapshot_opts_t
 
@@ -123,6 +137,8 @@ strings are set by [jerry_register_magic_strings](#jerry_register_magic_strings)
 when the snapshot is generated and executed. Furthermore the
 `JERRY_SNAPSHOT_EXEC_COPY_DATA` option is not allowed.
 
+*New in version 2.0*.
+
 ## jerry_exec_snapshot_opts_t
 
 Flags for [jerry_exec_snapshot](#jerry_exec_snapshot) and
@@ -143,6 +159,7 @@ parts of the snapshot buffer into memory.
 
 The `JERRY_SNAPSHOT_EXEC_COPY_DATA` option is not allowed for static snapshots.
 
+*New in version 2.0*.
 
 ## jerry_char_t
 
@@ -254,6 +271,8 @@ typedef struct
 } jerry_context_data_manager_t;
 ```
 
+*New in version 2.0*.
+
 ## jerry_context_alloc_t
 
 **Summary**
@@ -269,6 +288,7 @@ typedef void *(*jerry_context_alloc_t) (size_t size, void *cb_data_p);
 - `size` - allocation size
 - `cb_data_p` - pointer to user data
 
+*New in version 2.0*.
 
 ## jerry_context_t
 
@@ -282,6 +302,8 @@ An opaque declaration of the JerryScript context structure.
 typedef struct jerry_context_t jerry_context_t;
 ```
 
+*New in version 2.0*.
+
 
 ## jerry_binary_operation_t
 
@@ -293,6 +315,8 @@ Enum that contains the supported binary operation types
  - JERRY_BIN_OP_GREATER - greater relation (>)
  - JERRY_BIN_OP_GREATER_EQUAL - greater or equal relation (>=)
  - JERRY_BIN_OP_INSTANCEOF - instanceof operation
+
+*New in version 2.0*.
 
 **See also**
 
@@ -378,6 +402,8 @@ typedef struct
 } jerry_heap_stats_t;
 ```
 
+*New in version 2.0*.
+
 **See also**
 
 - [jerry_get_memory_stats](#jerry_get_memory_stats)
@@ -420,6 +446,8 @@ Native free callback of an object. It is used in `jerry_object_native_info_t` an
 typedef void (*jerry_object_native_free_callback_t) (void *native_p);
 ```
 
+*New in version 2.0*: Renamed from `jerry_object_free_callback_t`.
+
 **See also**
 
 - [jerry_object_native_info_t](#jerry_object_native_info_t)
@@ -449,6 +477,8 @@ typedef struct
   jerry_object_native_free_callback_t free_cb;
 } jerry_object_native_info_t;
 ```
+
+*New in version 2.0*.
 
 **See also**
 
@@ -503,6 +533,8 @@ typedef bool (*jerry_objects_foreach_t) (const jerry_value_t object,
   - true, to continue the iteration
   - false, to stop the iteration
 
+*New in version 2.0*.
+
 **See also**
 
 - [jerry_objects_foreach](#jerry_objects_foreach)
@@ -530,6 +562,8 @@ typedef bool (*jerry_objects_foreach_by_native_info_t) (const jerry_value_t obje
   - true, to continue the iteration
   - false, to stop the iteration
 
+*New in version 2.0*.
+
 **See also**
 
 - [jerry_objects_foreach_by_native_info](#jerry_objects_foreach_by_native_info)
@@ -550,6 +584,8 @@ In this case the function must throw the same error again.
 ```c
 typedef jerry_value_t (*jerry_vm_exec_stop_callback_t) (void *user_p);
 ```
+
+*New in version 2.0*.
 
 **See also**
 
@@ -574,6 +610,8 @@ Possible values:
 
 API functions can return the `JERRY_TYPEDARRAY_INVALID` value if the
 TypedArray support is not in the engine.
+
+*New in version 2.0*.
 
 **See also**
 
@@ -666,6 +704,8 @@ jerry_get_context_data (const jerry_context_data_manager *manager_p);
   by `manager_p`, which will be stored for future identical calls to `jerry_get_context_data ()`, and which will be
   deinitialized using the `deinit_cb` callback provided by `manager_p` when the context will be destroyed.
 
+*New in version 2.0*.
+
 **Example**
 
 [doctest]: # (test="compile")
@@ -746,6 +786,8 @@ jerry_register_magic_strings  (const jerry_char_t * const *ex_str_items_p,
 - `count` - number of elements in `ext_str_items_p` array
 - `str_lengths_p` - array of lengths for each magic string
 
+*Changed in version 2.0*: The first function argument type was changed.
+
 **Example**
 
 [doctest]: # ()
@@ -810,6 +852,8 @@ jerry_get_memory_stats (jerry_heap_stats_t *out_stats_p);
   - true, if stats were written into the `out_stats_p` pointer.
   - false, otherwise. Usually it is because the `JERRY_FEATURE_MEM_STATS` feature is not enabled.
 
+*New in version 2.0*.
+
 **Example**
 
 ```c
@@ -839,6 +883,8 @@ jerry_gc (jerry_gc_mode_t mode);
 ```
 
 - `mode` - operational mode, see [jerry_gc_mode_t](#jerry_gc_mode_t)
+
+*Changed in version 2.0*: Added `mode` argument.
 
 **Example**
 
@@ -949,6 +995,8 @@ jerry_parse (const jerry_char_t *resource_name_p, /**< resource name (usually a 
   - function object value, if script was parsed successfully,
   - thrown error, otherwise
 
+*Changed in version 2.0*: Added `resource_name_p`, and `resource_name_length` arguments.
+
 **Example**
 
 [doctest]: # ()
@@ -1014,6 +1062,7 @@ jerry_parse_function (const jerry_char_t *resource_name_p, /**< resource name (u
   - function object value, if script was parsed successfully,
   - thrown error, otherwise
 
+*New in version 2.0*.
 
 **Example**
 
@@ -1208,6 +1257,8 @@ jerry_run_all_enqueued_jobs (void)
 
 - return value - result of last executed job, may be error value.
 
+*New in version 2.0*.
+
 **Example**
 
 [doctest]: # ()
@@ -1296,6 +1347,8 @@ jerry_value_is_abort (const jerry_value_t value);
   - true, if the given `jerry_value_t` has the error and abort value set
   - false, otherwise
 
+*New in version 2.0*.
+
 **Example**
 
 ```c
@@ -1378,6 +1431,8 @@ jerry_value_is_arraybuffer (const jerry_value_t value)
 - return value
   - true, if the given `jerry_value_t` is an ArrayBuffer object.
   - false, otherwise
+
+*New in version 2.0*.
 
 **Example**
 
@@ -1502,6 +1557,8 @@ jerry_value_is_dataview (const jerry_value_t value)
   - true, if the given `jerry_value_t` is a DataView object
   - false, otherwise
 
+*New in version 2.0*.
+
 **Example**
 
 [doctest]: # ()
@@ -1553,6 +1610,8 @@ jerry_value_is_error (const jerry_value_t value);
 - return value
   - true, if the given `jerry_value_t` is error value.
   - false, otherwise
+
+*New in version 2.0*.
 
 **Example**
 
@@ -1756,6 +1815,8 @@ jerry_value_is_promise (const jerry_value_t value)
   - true, if the given `jerry_value_t` is a promise
   - false, otherwise
 
+*New in version 2.0*.
+
 **Example**
 
 ```c
@@ -1841,6 +1902,8 @@ jerry_value_is_symbol (const jerry_value_t value)
   - true, if the given `jerry_value_t` is a symbol
   - false, otherwise
 
+*New in version 2.0*.
+
 **Example**
 
 [doctest]: # ()
@@ -1898,6 +1961,8 @@ jerry_value_is_typedarray (const jerry_value_t value)
 - return value
   - true, if the given `jerry_value_t` is a TypedArray object.
   - false, otherwise
+
+*New in version 2.0*.
 
 **Example**
 
@@ -1991,6 +2056,8 @@ jerry_value_get_type (const jerry_value_t value);
 - return value
   - One of the [jerry_type_t](#jerry_type_t) value.
 
+*New in version 2.0*.
+
 **Example**
 
 ```c
@@ -2029,6 +2096,8 @@ jerry_is_feature_enabled (const jerry_feature_t feature);
 - return value
   - true, if the given `jerry_feature_t` is enabled
   - false, otherwise
+
+*New in version 2.0*.
 
 **Example**
 
@@ -2076,6 +2145,8 @@ jerry_binary_operation (jerry_binary_operation_t op,
 - return value
   - error, if argument has an error flag or operation is unsuccessful or unsupported
   - true/false, the result of the binary operation on the given operands otherwise
+
+*New in version 2.0*.
 
 **Example - JERRY_BIN_OP_EQUAL**
 
@@ -2168,6 +2239,8 @@ main (void)
 
 # Error manipulation functions
 
+*Changed in version 2.0*: The error handling and manipulation was modified and the old methods were replaced.
+
 ## jerry_create_abort_from_value
 
 **Summary**
@@ -2191,6 +2264,8 @@ jerry_create_abort_from_value (jerry_value_t value, bool release);
 - `value` - api value
 - `release` - raw boolean, defines whether input value must be released
 - return value - abort (api) value
+
+*New in version 2.0*.
 
 **Example 1**
 
@@ -2250,6 +2325,8 @@ jerry_create_error_from_value (jerry_value_t value, bool release);
 - `value` - api value
 - `release` - raw boolean, defines whether input value must be released
 - return value - error (api) value
+
+*New in version 2.0*.
 
 **Example 1**
 
@@ -2311,6 +2388,8 @@ jerry_get_error_type (const jerry_value_t value);
   - JERRY_ERROR_NONE if the input is not an error object
   - one of the [jerry_error_t](#jerry_error_t) value
 
+*New in version 2.0*.
+
 **Example**
 
 ```c
@@ -2357,6 +2436,8 @@ jerry_get_value_from_error (jerry_value_t value, bool release)
 - `value` - error (api) value
 - `release` - raw boolean, defines whether input value must be released
 - return value - api value
+
+*New in version 2.0*.
 
 **Example 1**
 
@@ -2545,6 +2626,8 @@ jerry_get_utf8_string_size (const jerry_value_t value);
 - `value` - api value
 - return value - number of bytes in the buffer needed to represent the utf8-encoded string.
 
+*New in version 2.0*.
+
 **Example**
 
 ```c
@@ -2630,6 +2713,8 @@ jerry_get_utf8_string_length (const jerry_value_t value);
 
 - `value` - input string value
 - return value - number of characters in the string
+
+*New in version 2.0*.
 
 **Example**
 
@@ -2760,6 +2845,8 @@ jerry_string_to_utf8_char_buffer (const jerry_value_t value,
 - `buffer_size` - size of the buffer
 - return value - number of bytes, actually copied to the buffer
 
+*New in version 2.0*.
+
 **Example**
 
 ```c
@@ -2814,6 +2901,8 @@ jerry_substring_to_char_buffer (const jerry_value_t value,
 - `buffer_p` - pointer to output buffer
 - `buffer_size` - size of the buffer
 - return value - number of bytes, actually copied to the buffer
+
+*New in version 2.0*.
 
 **Example**
 
@@ -2871,6 +2960,8 @@ jerry_substring_to_utf8_char_buffer (const jerry_value_t value,
 - `buffer_p` - pointer to output buffer
 - `buffer_size` - size of the buffer
 - return value - number of bytes, actually copied to the buffer
+
+*New in version 2.0*.
 
 **Example**
 
@@ -3167,6 +3258,8 @@ jerry_resolve_or_reject_promise (jerry_value_t promise,
   - undefined jerry value - resolve or reject successed
   - jerry value with error flag - otherwise
 
+*New in version 2.0*.
+
 **Example**
 
 ```c
@@ -3229,6 +3322,8 @@ jerry_get_symbol_descriptive_string (const jerry_value_t value);
 - return value
   - string value containing the symbol's descriptive string - if success
   - thrown error, otherwise
+
+*New in version 2.0*.
 
 **Example**
 
@@ -3397,6 +3492,8 @@ jerry_create_arraybuffer (jerry_length_t size);
  - `size` - size of the ArrayBuffer to create **in bytes**
  - return value - the new ArrayBuffer as a `jerry_value_t`
 
+*New in version 2.0*.
+
 **Example**
 
 ```c
@@ -3448,6 +3545,8 @@ jerry_create_arraybuffer_external (const jerry_length_t size
 - return value
   - the new ArrayBuffer as a `jerry_value_t`
   - if the `size` is zero or `buffer_p` is a null pointer will return RangeError
+
+*New in version 2.0*.
 
 **Example**
 
@@ -3619,6 +3718,8 @@ jerry_create_dataview (const jerry_value_t array_buffer,
 - return value
   - value of the constructed DataView object - if success
   - created error - otherwise
+
+*New in version 2.0*.
 
 **Example**
 
@@ -3927,6 +4028,8 @@ jerry_create_promise (void)
 
 - return value - value of the newly created promise
 
+*New in version 2.0*.
+
 **Example**
 
 ```c
@@ -4045,6 +4148,8 @@ jerry_create_string_from_utf8 (const jerry_char_t *str_p);
 - `str_p` - pointer to string
 - return value - value of the created string
 
+*New in version 2.0*.
+
 **Example**
 
 ```c
@@ -4085,6 +4190,8 @@ jerry_create_string_sz (const jerry_char_t *str_p,
 - `str_p` - pointer to string
 - `str_size` - size of the string
 - return value - value of the created string
+
+*New in version 2.0*.
 
 **Example**
 
@@ -4130,6 +4237,8 @@ jerry_create_symbol (const jerry_value_t value)
 - return value
   - value of the created symbol, if success
   - thrown error, otherwise
+
+*New in version 2.0*.
 
 **Example**
 
@@ -4184,6 +4293,8 @@ jerry_create_regexp (const jerry_char_t *pattern_p, uint16_t flags);
 - `flags` - optional flags for the RegExp object, see [jerry_regexp_flags_t](#jerry_regexp_flags_t)
 - return value - the RegExp object as a `jerry_value_t`
 
+*New in version 2.0*.
+
 **Example**
 
 ```c
@@ -4221,6 +4332,8 @@ jerry_create_regexp_sz (const jerry_char_t *pattern_p, jerry_size_t pattern_size
 - `pattern_size` - size of the `pattern`
 - `flags` - optional flags for the RegExp object, see [jerry_regexp_flags_t](#jerry_regexp_flags_t)
 - return value - the RegExp object as a `jerry_value_t`
+
+*New in version 2.0*.
 
 **Example**
 
@@ -4266,6 +4379,8 @@ jerry_create_typedarray (jerry_typedarray_type_t type_name, jerry_length_t item_
 - `type_name` - type of TypedArray to create
 - `item_count` - number of items in the new TypedArray
 - return value - the new TypedArray as a `jerry_value_t`
+
+*New in version 2.0*.
 
 **Example**
 
@@ -4323,6 +4438,8 @@ jerry_create_typedarray_for_arraybuffer (jerry_typedarray_type_t type_name,
 - return value
   - the new TypedArray as a `jerry_value_t`
   - Error if the ArrayBuffer does not have enough space for the given type of TypedArray
+
+*New in version 2.0*.
 
 **Example**
 
@@ -4386,6 +4503,8 @@ jerry_create_typedarray_for_arraybuffer_sz (jerry_typedarray_type_t type_name,
 - return value
   - the new TypedArray as a `jerry_value_t`
   - Error if the ArrayBuffer does not have enough space for the given type of TypedArray
+
+*New in version 2.0*.
 
 **Example**
 
@@ -4465,6 +4584,8 @@ jerry_has_property (const jerry_value_t obj_val,
   - true, if the property exists
   - false, otherwise
 
+*Changed in version 2.0*: The return value type is now a JavaScript value and not a primitive boolean value.
+
 **Example**
 
 [doctest]: # ()
@@ -4521,6 +4642,8 @@ jerry_has_own_property (const jerry_value_t obj_val,
 - return value - JavaScript boolean value that evaluates to
   - true, if the property exists
   - false, otherwise
+
+*Changed in version 2.0*: The return value type is now a JavaScript value and not a primitive boolean value.
 
 **Example**
 
@@ -4618,6 +4741,8 @@ jerry_delete_property_by_index (const jerry_value_t obj_val,
 - return value
   - true, if property was deleted successfully
   - false, otherwise
+
+*New in version 2.0*.
 
 **Example**
 
@@ -5437,6 +5562,8 @@ jerry_get_object_native_pointer (const jerry_value_t obj_val,
   - true, if there is native pointer associated of the specified object with the given native type info
   - false, otherwise
 
+*New in version 2.0*: Changed from `jerry_get_object_native_handle`.
+
 **Example**
 
 [doctest]: # ()
@@ -5646,6 +5773,8 @@ jerry_set_object_native_pointer (const jerry_value_t obj_val,
              be a long-lived pointer, usually a pointer to a
              `static const jerry_object_native_info_t` makes most sense.
 
+*New in version 2.0*: Changed from `jerry_set_object_native_handle`.
+
 **Example**
 
 See [jerry_get_object_native_pointer](#jerry_get_object_native_pointer) for a
@@ -5678,6 +5807,8 @@ jerry_delete_object_native_pointer (const jerry_value_t obj_val,
 
 - `obj_val` - object to delete native pointer from.
 - `info_p` - native pointer's type information.
+
+*New in version 2.0*.
 
 **Example**
 
@@ -5821,6 +5952,8 @@ jerry_objects_foreach (jerry_objects_foreach_t foreach_p,
   - `true`, if the search function terminated the traversal by returning `false`
   - `false`, if the end of the list of objects was reached
 
+*New in version 2.0*.
+
 **Example**
 
 [doctest]: # (name="02.API-REFERENCE-objects-foreach.c")
@@ -5957,6 +6090,8 @@ jerry_objects_foreach_by_native_info (const jerry_object_native_info_t *native_i
 - return value
   - `true`, if the search function terminated the traversal by returning `false`
   - `false`, if the end of the list of objects was reached
+
+*New in version 2.0*.
 
 **Example**
 
@@ -6112,6 +6247,8 @@ jerry_is_valid_utf8_string (const jerry_char_t *utf8_buf_p, /**< UTF-8 string */
   - true, if the provided string was a valid UTF-8 string.
   - false, if the string is not valid as an UTF-8 string.
 
+*New in version 2.0*.
+
 **Example**
 
 [doctest]: # ()
@@ -6166,6 +6303,8 @@ jerry_is_valid_cesu8_string (const jerry_char_t *cesu8_buf_p, /**< CESU-8 string
 - return value
   - true, if the provided string was a valid CESU-8 string.
   - false, if the string is not valid as a CESU-8 string.
+
+*New in version 2.0*.
 
 **Example**
 
@@ -6229,6 +6368,8 @@ void *jerry_heap_alloc (size_t size);
 - return value: non-NULL pointer, if the memory is successfully allocated,
                 NULL otherwise.
 
+*New in version 2.0*.
+
 **See also**
 
 - [jerry_heap_free](#jerry_heap_free)
@@ -6247,6 +6388,8 @@ void jerry_heap_free (void *mem_p, size_t size);
 
 - `mem_p`: value returned by `jerry_heap_alloc`.
 - `size`: same size as passed to `jerry_heap_alloc`.
+
+*New in version 2.0*.
 
 **See also**
 
@@ -6276,6 +6419,8 @@ jerry_create_context (uint32_t heap_size,
 - return value
   - pointer to the newly created JerryScript context if success
   - NULL otherwise.
+
+*New in version 2.0*.
 
 **Example**
 
@@ -6389,6 +6534,8 @@ jerry_generate_snapshot (const jerry_char_t *resource_name_p,
     current configuration through JERRY_SNAPSHOT_SAVE)
   - thrown error, otherwise.
 
+*New in version 2.0*.
+
 **Example**
 
 [doctest]: # ()
@@ -6472,6 +6619,8 @@ jerry_generate_function_snapshot (const jerry_char_t *resource_name_p,
     current configuration through JERRY_SNAPSHOT_SAVE)
   - thrown error, otherwise.
 
+*New in version 2.0*.
+
 **Example**
 
 [doctest]: # ()
@@ -6541,6 +6690,8 @@ jerry_exec_snapshot (const uint32_t *snapshot_p,
 - return value
   - result of bytecode, if run was successful
   - thrown error, otherwise
+
+*Changed in version 2.0*: Added `func_index` and `exec_snapshot_opts` arguments. Removed the `copy_bytecode` last argument.
 
 **Example**
 
@@ -6619,6 +6770,8 @@ jerry_load_function_snapshot (const uint32_t *snapshot_p,
 - return value
   - function object built from the snapshot.
   - thrown error, otherwise.
+
+*New in version 2.0*.
 
 **Example**
 
@@ -6714,6 +6867,8 @@ jerry_get_literals_from_snapshot (const uint32_t *snapshot_p,
     and literal-save support is enabled in current configuration through JERRY_SNAPSHOT_SAVE)
   - 0 otherwise.
 
+*New in version 2.0*.
+
 **Example**
 
 [doctest]: # (test="link")
@@ -6802,6 +6957,8 @@ jerry_set_vm_exec_stop_callback (jerry_vm_exec_stop_callback_t stop_cb,
 - `user_p` - user pointer passed to the `stop_cb` function
 - `frequency` - frequency of calling the `stop_cb` function
 
+*New in version 2.0*.
+
 **Example**
 
 [doctest]: # (test="link")
@@ -6876,6 +7033,8 @@ jerry_get_backtrace (uint32_t max_depth);
 - `max_depth` - backtrace collection stops after reaching this value, 0 = unlimited
 - return value
   - a newly constructed JS array
+
+*New in version 2.0*.
 
 **Example**
 
@@ -6993,6 +7152,8 @@ jerry_get_arraybuffer_byte_length (const jerry_value_t value);
   - size of the ArrayBuffer in bytes
   - 0 if the `value` parameter is not an ArrayBuffer
 
+*New in version 2.0*.
+
 **Example**
 
 ```c
@@ -7042,6 +7203,8 @@ jerry_arraybuffer_read (const jerry_value_t value,
   - number of bytes written into the buffer (read from the ArrayBuffer)
   - 0 if the `value` is not an ArrayBuffer object
   - 0 if the `buf_size` is zero or there is nothing to read
+
+*New in version 2.0*.
 
 **Example**
 
@@ -7105,6 +7268,8 @@ jerry_arraybuffer_write (const jerry_value_t value,
   - 0 if the `value` is not an ArrayBuffer object
   - 0 if the `buf_size` is zero or there is nothing to write
 
+*New in version 2.0*.
+
 **Example**
 
 ```c
@@ -7165,6 +7330,8 @@ jerry_get_arraybuffer_pointer (const jerry_value_t value);
   - pointer to the Array Buffer's data area.
   - NULL if the `value` is not an Array Buffer object.
 
+*New in version 2.0*.
+
 **Example**
 
 ```c
@@ -7217,6 +7384,8 @@ jerry_get_dataview_buffer (const jerry_value_t value,
 - return
   - DataView object's underlying ArrayBuffer object
   - TypeError if the `value` is not a DataView object
+
+*New in version 2.0*.
 
 **Example**
 
@@ -7276,6 +7445,8 @@ jerry_get_typedarray_type (jerry_value_t value);
   - the type of the TypedArray
   - JERRY_TYPEDARRAY_INVALID if the object was not a TypedArray
 
+*New in version 2.0*.
+
 **Example**
 
 ```c
@@ -7316,6 +7487,8 @@ jerry_get_typedarray_length (jerry_value_t value);
 - return
   - length (element count) of the TypedArray object
   - 0 if the object is not a TypedArray
+
+*New in version 2.0*.
 
 **Example**
 
@@ -7366,6 +7539,8 @@ jerry_get_typedarray_buffer (jerry_value_t value,
   - TypedArray object's underlying ArrayBuffer object
   - TypeError if the `value` is not a TypedArray object
 
+*New in version 2.0*.
+
 **Example**
 
 ```c
@@ -7411,6 +7586,8 @@ jerry_json_parse (const jerry_char_t *string_p,
   - jerry_value_t containing the same as json.parse()
   - jerry_value_t containing error massage
 
+*New in version 2.0*.
+
 **Example**
 
 ```c
@@ -7441,6 +7618,8 @@ jerry_json_stringify (const jerry_value_t object_to_stringify);
 - return
   - jerry_value_t containing the same as json.stringify()
   - jerry_value_t containing error massage
+
+*New in version 2.0*.
 
 **Example**
 
