Disable unsupported doctest tests on Windows
Disable 02.API-REFERENCE-create-context.c, because
it is based on pthread, and there is no pthread on Windows.

Disable 11.EXT-REFERENCE-AUTORELEASE.c and test-ext-autorelease.c
if compiler is MSVC, because MSVC doesn't support cleanup attribute.

JerryScript-DCO-1.0-Signed-off-by: Csaba Osztrogonác oszi@inf.u-szeged.hu

--- a/docs/02.API-REFERENCE.md
+++ b/docs/02.API-REFERENCE.md
@@ -6425,7 +6425,7 @@ jerry_create_context (uint32_t heap_size,
 
 **Example**
 
-[doctest]: # (test="compile")
+[doctest]: # (test="compile", name="02.API-REFERENCE-create-context.c")
 
 ```c
 #include <stdlib.h>
